--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "workspaces": [
     "contracts",
@@ -12,10 +12,11 @@
     "frontend"
   ],
   "devDependencies": {
-    "@typechain/hardhat": "^8.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@typechain/hardhat": "^9.1.0",
     "ethers": "^6.0.0",
-    "hardhat": "^2.15.0",
-    "hardhat-gas-reporter": "^1.0.0",
+    "hardhat": "^2.26.3",
+    "hardhat-gas-reporter": "^2.3.0",
     "solidity-coverage": "^0.8.0",
     "ts-node": "^10.9.1",
     "typechain": "^8.0.0",
@@ -26,6 +27,7 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jest": "^30.0.5"
   }
